--- a/Code04/app/src/main/res/layout/activity_message.xml
+++ b/Code04/app/src/main/res/layout/activity_message.xml
@@ -5,5 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MessageActivity">
+    <TextView
+        android:id="@+id/acceptMessage"
+        android:hint="This is a accept Message"
+        android:textSize="50sp"
+        android:gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
