--- a/code07/app/src/main/res/layout/activity_main.xml
+++ b/code07/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,8 @@
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lv_news_list"
        android:layout_width="match_parent"
-       android:layout_height="match_parent"
+       android:layout_height="0dp"
+       android:scrollbars="none"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
