start do contentNews

--- a/GGnews/app/src/main/res/layout/activity_detail.xml
+++ b/GGnews/app/src/main/res/layout/activity_detail.xml
@@ -6,5 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".DetailActivity">
 
-    
+    <WebView
+        android:id="@+id/wbview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
